--- a/my-app/src/assets/main.css
+++ b/my-app/src/assets/main.css
@@ -1,9 +1,7 @@
 @import './base.css';
 
 #app {
-    max-width: 1280px;
     min-width: 1280px;
-    margin: 0 auto;
     padding: 2rem;
     font-weight: normal;
 }
@@ -16,6 +14,10 @@ a,
     padding: 3px;
 }
 
+h1{
+ border-bottom: 1px solid;
+}
+
 @media (hover: hover) {
     a:hover {
         background-color: hsla(160, 100%, 37%, 0.2);
@@ -25,8 +27,6 @@ a,
 @media (min-width: 1024px) {
     body {
         display: flex;
-        padding-top: 100px;
-        padding-bottom: 100px;
     }
 
     #app {
