--- a/shroomer-front/src/assets/main.css
+++ b/shroomer-front/src/assets/main.css
@@ -1,42 +1,7 @@
-@import './base.css';
+@import 'tailwindcss';
 
-#app {
-    min-width: 1280px;
-    padding: 2rem;
-    font-weight: normal;
-}
-
-a,
-.green {
-    text-decoration: none;
-    color: hsla(160, 100%, 37%, 1);
-    transition: 0.4s;
-    padding: 3px;
-}
-
-h1{
-    border-bottom: 1px solid;
-    text-align: center;
-}
-
-@media (hover: hover) {
-    a:hover {
-        background-color: hsla(160, 100%, 37%, 0.2);
-    }
-}
-
-@media (min-width: 1024px) {
-    body {
-        display: flex;
-    }
-
-    #app {
-        display: grid;
-        grid-template-columns: 1fr 5fr;
-        padding: 0 2rem;
-    }
-
-    nav > a {
-        display: block;
-    }
+body {
+    font-family:
+        'Courier New',
+        sans-serif;
 }
